v0.7.3 BETA : 2016/02/15 <AirpLunaLua>
  + Based on LunaDLL Git revision d7e3eec047e8cb2f45486bd4cbfea3132b17cb7b.

v0.7.3 BETA : 2016/02/14 <AirpLunaLua>
  + Based on LunaDLL Git revision 7af75f7c60a20f0b2226905493af2d5cbc0f5e61.
  * Fixed conflict.

v0.7.3 BETA : 2016/02/13 <AirpLunaLua>
  + Based on LunaDLL Git revision 47e55099e7d52b85f27ad243c79152cdbf8d61ae.
  * Add responseBody properties to AsyncHTTPRequest.
  * Added Video support for LuaImageResource. (Required ffmpeg)
  * Disabled SdlMusPlayer error message.
  * Add Misc.updateWarp() from APLib.

v0.7.3 BETA
  * Added new compareLunaVersion for version checking
  * Added new event onKeyboardPress which handles raw keyboard input
  * Added new draw function (Graphics.draw [Named args])
  * Added new OpenGL drawing system (Graphics.glDraw [Named args])
  * Added new lua based pause function: Misc.pause, Misc.unpause, Misc.isPausedByLua
  * Improvement [LunaLua]: Refactored mainV2.lua for better performance and smaller code
  * Added new function for better controlling the loop: onTick, onTickEnd, onDraw, onDrawEnd
  * Improvement [LunaLua]: onHUDDraw and onCameraUpdate now has the camera index as argument.
  * Improvement [LunaLua]: onMessageBox can now be cancelled
  * Added FIELD_BOOL which can be used for the mem-functions.
  * Added NPC.get overload with only the npc-id as argument.
  * Bugfix [LunaLua]: SMBX doesn't crash anymore, if you pass nil to some LunaLua functions.
  * Improvement [LunaLua]: The max npc id is now 300
  * Added NPC:harm
  * Bugfix [LunaLua]: Tiles can now correctly be replaced with PNGs.
  * Bugfix [LunaLua]: PlayerSetting.height was pointing to players width
  * Extended Camera class
  * Bugfix [LunaLua]: Cheat defines now don't reset.
  * Added registerCustomEvent, so you can create custom events from your APIs.
  * Added event onCameraUpdate and Camera.x, Camera.y is now writeable.
  * Added a lot of new world map classes.