@@ -591,8 +591,32 @@ LuaProxy::RECTd LuaProxy::newRECTd()
 	return r;
 }
 
+LuaProxy::Warp LuaProxy::spawnWarp(const luabind::object &value , double entranceX, double entranceY, double exitX, double exitY, lua_State* L)
+{
+	if (GM_WARP_COUNT >= 5000) {
+		luaL_error(L, "Over 5000 Warps, cannot spawn more!");
+		return LuaProxy::Warp(-1);
+	}
 
+	LuaProxy::Warp theNewWarp(GM_WARP_COUNT);
 
+	theNewWarp.setEntranceX(entranceX);
+	theNewWarp.setEntranceY(entranceY);
+	theNewWarp.setExitX(exitX);
+	theNewWarp.setExitY(exitY);
+
+	theNewWarp.mem(0x0E, LuaProxy::L_FIELDTYPE::LFT_WORD, luabind::adl::object(L, -1), L);
+	theNewWarp.mem(0x10, LuaProxy::L_FIELDTYPE::LFT_WORD, luabind::adl::object(L, -1), L);
+	theNewWarp.mem(0x2A, LuaProxy::L_FIELDTYPE::LFT_WORD, luabind::adl::object(L, 16448), L);
+	theNewWarp.mem(0x32, LuaProxy::L_FIELDTYPE::LFT_WORD, luabind::adl::object(L, 16448), L);
+	//theNewWarp.mem(0x32, LuaProxy::L_FIELDTYPE::LFT_STRING, luabind::adl::object(L, "Default"), L); <- Crash. Not required?
+
+	native_updateWarp();
+
+	++(GM_WARP_COUNT);
+
+	return theNewWarp;
+}
 
 
 LuaProxy::NPC LuaProxy::spawnNPC(short npcid, double x, double y, short section, lua_State* L)
